terminei o rolando dados

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rolando dados</title>
 </head>
 <body>
-    <h1>Rolando dados</h1>
-
-    <script src="dice-roller.js"></script>
+    <button id="rolar"><h1>Rolando dados</h1></button>
+    <main>
+        <div id="mostrar"></div>
+    <div id="mostrarTabela"></div>
+    </main>
+    
+    
+    <script src="script.js"></script>
 </body>
 </html>
